[FIXED]:active menu not showing

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,4 +1,3 @@
-//TODO: active menu item not showing
 .primary-nav{
   background-color: var(--primary-color);
   padding: 0 2rem;
@@ -98,7 +97,7 @@
 				}
 			}
 			&::after,
-			&--active{
+			&--active::after{
 				content: "";
 				position: absolute;
 				min-height: 2px;
@@ -114,15 +113,11 @@
 				&::after{
 					width: 100%;
 				}
-				&__item{
-					&::after{
-						width: 100%;
-					}
-				}
 			}
 		}
 	}
 }
+
 
 
 
